<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_book_tab"
            android:layout_height="@dimen/img_book_tab"
            app:srcCompat="@drawable/ic_book_tab_1" />

        <com.bon.customview.textview.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_tab_1"
            android:textColor="@color/colorTextGray"
            android:textSize="17sp"
            app:textViewFontAssetName="@string/font_regular" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_book_tab"
            android:layout_height="@dimen/img_book_tab"
            app:srcCompat="@drawable/ic_book_tab_3" />

        <com.bon.customview.textview.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_tab_3"
            android:textColor="@color/colorTextGray"
            android:textSize="17sp"
            app:textViewFontAssetName="@string/font_regular" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_book_tab"
            android:layout_height="@dimen/img_book_tab"
            app:srcCompat="@drawable/ic_book_tab_2" />

        <com.bon.customview.textview.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_tab_2"
            android:textColor="@color/colorTextGray"
            android:textSize="17sp"
            app:textViewFontAssetName="@string/font_regular" />

    </LinearLayout>

</LinearLayout>